# LinChat

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  pytest_asyncio.py  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-release.yml
analysis_service/: Cargo.toml  Dockerfile
analysis_service/src/: main.rs
app/: analysis_agent.py  analysis_service_client.py  auth.py  config.json  config.py  config_utils.py  database.py  db.py  logging_setup.py  main.py  models.py  reporting.py  vector_db.py
app/ingest/: __init__.py  docx_parser.py  excel_parser.py  pdf_parser.py  ppt_parser.py
app/scraper/: __init__.py  service.py
bs4/: __init__.py
docs/: openapi.json  oshan_toc.md  team_workspaces.md
docs/wireframes/: login_register_wireframes.md  workspace_chat_layout.md
fastapi/: __init__.py
fastapi_users/: __init__.py
fastapi_users/db/: __init__.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  ChatContext.jsx  Login.jsx  Register.jsx  api.js  main.jsx  theme.js
frontend/src/admin/: AdminDashboard.jsx  AuditLogTable.jsx  UserTable.jsx  WorkspaceTable.jsx
k8s/: linchat.yaml
pptx/: util.py
scripts/: generate_openapi.py
sqlalchemy/: __init__.py
sqlalchemy/orm/: __init__.py
tests/: conftest.py  test_admin_workspaces.py  test_analysis_service_client.py  test_ingest.py  test_integration.py  test_llm.py  test_scraper.py  test_share_slides.py  test_vector_db.py
(+30 files in other folders)
