[package]
name = "analysis_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.49", features = ["lazy"] }
plotters = "0.3"
plotters-svg = "0.3"
base64 = "0.21"
calamine = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
